--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "web3": "^4.16.0",
+    "whatwg-url": "^14.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
