--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
     "pg": "^8.13.1",
@@ -22,8 +23,10 @@
     "whatwg-url": "^14.1.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
+    "hardhat": "^2.22.17",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
